# dephy-esp32c3-rust-boilerplate

./: .gitignore  Cargo.toml  README.md  build.rs  diagram.json  example.build.env  huge_app.csv  rust-toolchain.toml  sdkconfig.defaults  upload_dev.sh  wokwi.toml
.cargo/: config.toml
src/: app.rs  ble.rs  build_env.rs  crypto.rs  http.rs  key_inspect.rs  main.rs  mqtt.rs  ntp.rs  peripherals.rs  preludes.rs  wifi.rs
src/proto/: message.proto  mod.rs
